--- a/RickAndMorty/app/src/main/res/values/strings.xml
+++ b/RickAndMorty/app/src/main/res/values/strings.xml
@@ -11,8 +11,8 @@
     <string name="character_image">Character Image</string>
     <string name="go_to_next_button">Go to Next Button</string>
     <string name="go_to_back_button">Go to Back Button</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="update">Update</string>
     <string name="competition">Competition</string>
+    <string name="check">CHECK</string>
+    <string name="score_formatted">Score: %s</string>
 </resources>
